Added an Orchard Core Module project and referenced it from the web app.

--- a/OCApp/OCApp.Web/OCApp.Web.csproj
+++ b/OCApp/OCApp.Web/OCApp.Web.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="OrchardCore.Application.Mvc.Targets" Version="1.2.2-preview-16385" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Feature1\Feature1.csproj" />
+  </ItemGroup>
+
 </Project>
